tests/paczka1/small_fuzzy/84005018.err
Error in line 4: S31 S993 34,7
Error in line 8: u4Nrk02Nc S313 29,63
Error in line 7: S31 S31 50,3
Error in line 10: u4Nrk02Nc A947 51,0
Error in line 14: u4Nrk02Nc S31 57,4
